--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "nodemon": "^2.0.16"
     },
     "dependencies": {
+        "body-parser": "^1.20.0",
         "express": "^4.18.1"
     }
 }
