--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "body-parser": "^1.20.0",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "uuid": "^8.3.2"
     }
 }
