--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "mocha",
         "start": "nodemon --exec babel-node src/app"
@@ -14,6 +15,8 @@
         "@babel/core": "^7.18.0",
         "@babel/node": "^7.17.10",
         "@babel/preset-env": "^7.18.0",
+        "chai": "^4.3.6",
+        "chai-http": "^4.3.0",
         "mocha": "^10.0.0",
         "nodemon": "^2.0.16"
     },
