--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "nodemon": "^2.0.16"
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "uuid": "^8.3.2"
     }
 }
